--- a/app/src/main/res/layout/activity_screen_edu_main.xml
+++ b/app/src/main/res/layout/activity_screen_edu_main.xml
@@ -1,84 +1,115 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#aabbcc"
+    android:background="@drawable/screenedu_background"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".screenEdu.ScreenEduActivity" >
+    tools:context=".edu_space.screenEdu.activity.ScreenEduMainActivity">
 
-    <include layout="@layout/toolbar"
-        android:background="@drawable/transparent_black_box"/>
+    <!-- 상단바 -->
+    <include layout="@layout/toolbar" />
 
-    <ImageView
-        android:id="@+id/hand_iv"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/hand"
-        android:visibility="gone" />
-
-    <LinearLayout
-        android:layout_width="366dp"
-        android:layout_height="644dp"
-        android:layout_weight="1"
-        android:background="@drawable/green_border"
-        android:gravity="center"
-        android:orientation="vertical">
-
-
-        <TextView
-            android:id="@+id/change_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="이 부분은 메뉴 화면 입니다"
-            android:textSize="30dp" />
-
-
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/next_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="다음" />
-
-    <!-- Bottom Bar Layout 추가 -->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:background="@drawable/transparent_black_box"
-        android:layout_gravity="bottom">
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="0dp"
+        android:background="@drawable/green_box">
 
-        <!-- 왼쪽 세로 선 3개 (네비게이션 아이콘) -->
         <ImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="16dp"
-            android:layout_centerVertical="true"
-            android:src="@drawable/baseline_menu_24" />
+            android:layout_width="wrap_content"
+            android:layout_height="334dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="200dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="30dp"
+            android:background="@drawable/explanation_whitebox" />
 
-        <!-- 가운데 공간 (추가 기능이나 앱 아이콘) -->
-        <ImageView
-            android:id="@+id/homeIcon"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_centerInParent="true"
-            android:src="@drawable/background_round"
-            />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="260dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="30dp"
+            android:background="@android:color/black" />
 
-        <!-- 오른쪽 화살표 또는 뒤로 가기 버튼 -->
+        <TextView
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="207dp"
+            android:fontFamily="@font/pretendard_extrabold"
+            android:text="홈 화면"
+            android:textColor="#000000"
+            android:textSize="30sp" />
+
+        <TextView
+            android:id="@+id/description_text"
+            android:layout_width="331dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="45dp"
+            android:layout_marginTop="270dp"
+            android:fontFamily="@font/pretendard_semibold"
+            android:text="주로 배경화면이라고 불립니다."
+            android:textColor="#000000"
+            android:textSize="32sp" />
+
         <ImageView
-            android:id="@+id/backIcon"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="140dp"
-            android:layout_marginEnd="28dp"
-            android:layout_toEndOf="@+id/homeIcon"
-            android:src="@drawable/baseline_back" />
+            android:id="@+id/screenedu_nextbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="200dp"
+            android:layout_marginTop="452dp"
+            android:background="@drawable/screenedu_nextbtn" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="231dp"
+            android:layout_marginTop="460dp"
+            android:fontFamily="@font/pretendard_semibold"
+            android:text="다음"
+            android:textColor="#000000"
+            android:textSize="28sp" />
+
+
+        <ImageView
+            android:id="@+id/screenedu_backbtn"
+            android:layout_width="115dp"
+            android:layout_height="52dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="452dp"
+            android:background="@drawable/screenedu_backbtn" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="81dp"
+            android:layout_marginTop="460dp"
+            android:fontFamily="@font/pretendard_semibold"
+            android:text="이전"
+            android:textColor="#000000"
+            android:textSize="28sp" />
+
 
     </RelativeLayout>
+
+    <!-- 하단바 -->
+    <include layout="@layout/nevigationbar" />
 
 </LinearLayout>
