--- a/app/src/main/res/layout/nevigationbar.xml
+++ b/app/src/main/res/layout/nevigationbar.xml
@@ -1,38 +1,49 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- res/layout/bottom_bar.xml -->
+<!-- First RelativeLayout -->
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="56dp"
-    android:background="#80000000"
-    android:layout_gravity="bottom">
+    android:id="@+id/nevigationbar"
+    android:layout_width="360dp"
+    android:layout_height="42dp"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentTop="true"
+    android:layout_marginBottom="0dp"
 
-    <!-- 왼쪽 세로 선 3개 (네비게이션 아이콘) -->
-    <ImageView
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_marginStart="16dp"
-        android:layout_centerVertical="true"
-        android:src="@drawable/baseline_menu_24" />
+    android:clipToOutline="true">
 
-    <!-- 가운데 공간 (추가 기능이나 앱 아이콘) -->
-    <ImageView
-        android:id="@+id/homeIcon"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_centerInParent="true"
-        android:src="@drawable/background_round" />
+    <!--최근 목록 아이콘-->
 
-    <!-- 오른쪽 화살표 또는 뒤로 가기 버튼 -->
+    <!--홈 아이콘-->
+
     <ImageView
-        android:id="@+id/backIcon"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="140dp"
-        android:layout_marginEnd="28dp"
-        android:layout_toEndOf="@+id/homeIcon"
-        android:src="@drawable/baseline_back" />
+        android:layout_width="15dp"
+        android:layout_height="16dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="178dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/screendedu_home" />
+
+    <ImageView
+        android:layout_width="15dp"
+        android:layout_height="16dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="72dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/screenedu_recent_apps" />
+
+    <!-- 뒤로 가기 아이콘 -->
+    <ImageView
+        android:layout_width="15dp"
+        android:layout_height="16dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="288dp"
+        android:layout_marginLeft="288dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="288dp"
+        android:layout_marginRight="72dp"
+        android:layout_marginBottom="288dp"
+        android:src="@drawable/screenedu_back" />
 
 </RelativeLayout>
