--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,39 +1,57 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/appBarLayout"
-    android:layout_width="match_parent"
-    android:layout_height="20dp"
-    android:orientation="horizontal"
-    android:background="#80000000">
+<!-- Auto layout, variables, and unit scale are not yet supported -->
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/screenedu_toolbar"
+    android:layout_width="360dp"
+    android:layout_height="60dp"
+    >
 
-    <!--상단바 유사하게 만들기-->
-    <LinearLayout
+    <TextView
+        android:id="@+id/textViewNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:layout_marginRight="5dp"
-            android:textSize="12dp"
-            android:text="5:26"/>
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:textSize="12dp"
-            android:textColor="@color/white"
-            android:text="55%"/>
-        <ImageView
-            android:layout_width="15dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/baseline_battery_4_bar_24"/>
-    </LinearLayout>
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="27dp"
+        android:layout_marginTop="17dp"
+        android:text="4:19"
+        android:textColor="#ffffff"
+        android:textSize="20sp" />
 
-</LinearLayout>
+    <ImageView
+        android:layout_width="21dp"
+        android:layout_height="23dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="286dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/wifi_white" />
+
+    <ImageView
+        android:layout_width="21dp"
+        android:layout_height="23dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="262dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/sound_white" />
+
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="43dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="299dp"
+        android:layout_marginTop="13dp"
+        android:src="@drawable/signal_white" />
+
+    <ImageView
+        android:layout_width="21dp"
+        android:layout_height="23dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="330dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/battery_white" />
+
+</RelativeLayout>
