--- a/app/src/main/res/layout/icon_list.xml
+++ b/app/src/main/res/layout/icon_list.xml
@@ -2,18 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:layout_marginRight="24dp"
+    android:layout_marginLeft="24dp"
+    android:layout_marginBottom="17dp">
 
     <LinearLayout
         android:id="@+id/itemView"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:orientation="horizontal">
+        android:layout_height="108dp"
+        android:orientation="horizontal"
+        android:background="@drawable/round_corner_white"
+        android:layout_gravity="center_vertical"
+
+        android:elevation="4dp">
 
         <ImageView
             android:id="@+id/icon_iv"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="91dp"
+            android:layout_height="91dp"
             android:layout_gravity="center" />
 
         <TextView
@@ -21,6 +28,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:paddingLeft="33dp"
+            android:textSize="32dp"
+            android:fontFamily="@font/pretendard_semibold"
             android:text="음량 조절"/>
     </LinearLayout>
 </LinearLayout>
