--- a/app/src/main/res/layout/screen_toolbar.xml
+++ b/app/src/main/res/layout/screen_toolbar.xml
@@ -19,7 +19,7 @@
         android:layout_width="370dp"
         android:layout_height="58dp"
         android:layout_gravity="bottom"
-        android:background="@drawable/green_bar">
+        android:background="@drawable/ic_edu_explane_greenbar">
 
         <include layout="@layout/toolbar" />
 
