--- a/app/src/main/res/layout/activity_screen_edu_toolbar.xml
+++ b/app/src/main/res/layout/activity_screen_edu_toolbar.xml
@@ -28,7 +28,7 @@
         android:layout_marginBottom="100dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/green_bar">
+        android:background="@drawable/ic_edu_explane_greenbar">
 
         <include layout="@layout/toolbar" />
 
@@ -62,7 +62,7 @@
         android:layout_marginEnd="30dp"
         android:layout_marginRight="15dp"
         android:layout_marginBottom="30dp"
-        android:background="@drawable/arrowup_white" />
+        android:background="@drawable/ic_edu_arrow_up_white" />
 
     <View
         android:layout_width="match_parent"
