--- a/app/src/main/res/layout/screen_edu_bottom.xml
+++ b/app/src/main/res/layout/screen_edu_bottom.xml
@@ -19,7 +19,7 @@
         android:layout_marginTop="600dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="0dp"
-        android:background="@drawable/green_bar">
+        android:background="@drawable/ic_edu_explane_greenbar">
         <include layout="@layout/nevigationbar" />
 
     </RelativeLayout>
