--- a/app/src/main/res/layout/activity_icon_edu.xml
+++ b/app/src/main/res/layout/activity_icon_edu.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <include layout="@layout/icon_edu"/>
+        <include layout="@layout/fragment_icon_toolbar"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/icon_rv"
