--- a/app/src/main/res/layout/fragment_sreen_nevigationbar.xml
+++ b/app/src/main/res/layout/fragment_sreen_nevigationbar.xml
@@ -2,8 +2,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/nevigationbar"
-    android:layout_width="360dp"
-    android:layout_height="42dp"
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
     android:layout_alignParentLeft="true"
     android:layout_alignParentTop="true"
     android:clipToOutline="true">
@@ -15,7 +15,7 @@
     <ImageView
         android:layout_width="15dp"
         android:layout_height="16dp"
-        android:layout_alignParentLeft="true"
+        android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="178dp"
         android:layout_marginTop="20dp"
@@ -34,12 +34,11 @@
     <ImageView
         android:layout_width="15dp"
         android:layout_height="16dp"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="288dp"
-        android:layout_marginLeft="288dp"
+
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="288dp"
+
         android:layout_marginRight="72dp"
         android:layout_marginBottom="288dp"
         android:src="@drawable/screenedu_back" />
