--- a/app/src/main/res/layout/activity_screen_centernevigation.xml
+++ b/app/src/main/res/layout/activity_screen_centernevigation.xml
@@ -36,11 +36,12 @@
             android:layout_marginBottom="5dp" />
 
         <ImageView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
+            android:layout_marginLeft="160dp"
             android:layout_marginBottom="15dp"
-            android:src="@drawable/ic_edu_explane_greenbar"
+            android:src="@drawable/ic_edu_explane_leftgreenbar"
             android:scaleType="fitXY"/>
 
     </RelativeLayout>
@@ -61,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="460dp"
-        android:layout_marginLeft="40dp"
+        android:layout_marginLeft="180dp"
         android:background="@drawable/ic_edu_arrow_down_white" />
 
     <View
@@ -92,7 +93,7 @@
         android:layout_marginLeft="45dp"
         android:layout_marginTop="270dp"
         android:fontFamily="@font/pretendard_semibold"
-        android:text="이 부분은\n하단바(네비게이션)\n부분 입니다."
+        android:text="이 부분은\n홈 화면으로\n돌아갈 수 있습니다."
         android:textColor="#000000"
         android:textSize="32sp" />
 
