--- a/app/src/main/res/layout/activity_screen_leftnevigation.xml
+++ b/app/src/main/res/layout/activity_screen_leftnevigation.xml
@@ -36,11 +36,12 @@
             android:layout_marginBottom="5dp" />
 
         <ImageView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
+            android:layout_marginLeft="35dp"
             android:layout_marginBottom="15dp"
-            android:src="@drawable/ic_edu_explane_greenbar"
+            android:src="@drawable/ic_edu_explane_leftgreenbar"
             android:scaleType="fitXY"/>
 
     </RelativeLayout>
@@ -92,7 +93,7 @@
         android:layout_marginLeft="45dp"
         android:layout_marginTop="270dp"
         android:fontFamily="@font/pretendard_semibold"
-        android:text="이 부분은\n하단바(네비게이션)\n부분 입니다."
+        android:text="이 버튼은\n최근 실행 앱을\n볼 수 있습니다."
         android:textColor="#000000"
         android:textSize="32sp" />
 
