--- a/app/src/main/res/layout/activity_screen_toolbar_right.xml
+++ b/app/src/main/res/layout/activity_screen_toolbar_right.xml
@@ -15,36 +15,30 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="0dp"
-        android:layout_marginBottom="94dp"
+        android:layout_marginTop="94dp"
+        android:layout_marginEnd="0dp"
         android:scaleType="fitXY"
         android:src="@drawable/screenedu_blackground" />
 
-    <!--상단바-->
     <include layout="@layout/fragment_screen_toolbar" />
-
-    <!-- 하단바 -->
+    <!-- 상단바-->
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <include
-            layout="@layout/fragment_sreen_nevigationbar"
-            android:layout_width="match_parent"
-            android:layout_height="69dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="5dp" />
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="15dp"
-            android:src="@drawable/ic_edu_explane_greenbar"
-            android:scaleType="fitXY"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/ic_edu_explane_rightgreenbar">
 
     </RelativeLayout>
 
+    <!-- 하단바 -->
+    <include
+        layout="@layout/fragment_sreen_nevigationbar"
+        android:layout_width="match_parent"
+        android:layout_height="69dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="5dp" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -59,10 +53,11 @@
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="460dp"
-        android:layout_marginLeft="40dp"
-        android:background="@drawable/ic_edu_arrow_down_white" />
+        android:layout_height="250dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="70dp"
+        android:layout_marginTop="75dp"
+        android:background="@drawable/ic_edu_arrow_up_white" />
 
     <View
         android:layout_width="match_parent"
@@ -76,12 +71,13 @@
         android:background="@android:color/black" />
 
     <TextView
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="207dp"
         android:fontFamily="@font/pretendard_extrabold"
-        android:text="하단바"
+        android:text="상단바"
         android:textColor="#000000"
         android:textSize="30sp" />
 
@@ -92,7 +88,7 @@
         android:layout_marginLeft="45dp"
         android:layout_marginTop="270dp"
         android:fontFamily="@font/pretendard_semibold"
-        android:text="이 부분은\n하단바(네비게이션)\n부분 입니다."
+        android:text="우측 상단에는\n스마트폰의 현재 상태를\n나타냅니다."
         android:textColor="#000000"
         android:textSize="32sp" />
 
