--- a/app/src/main/res/layout/fragment_learning.xml
+++ b/app/src/main/res/layout/fragment_learning.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/bgColor1"
     tools:context=".LearningFragment">
+
+    <View
+        android:id="@+id/icon_green2"
+        android:layout_width="match_parent"
+        android:layout_height="167dp"
+        android:background="@color/eduColor1" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,14 +24,18 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp">
 
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:gravity="center"
                 android:text="교육 공간"
-                android:textColor="@color/black"
-                android:textSize="20sp"
+                android:gravity="center"
+                app:layout_constraintTop_toTopOf="@id/icon_green2"
+                app:layout_constraintStart_toStartOf="@id/icon_green2"
+                android:textColor="@color/white"
+                android:textSize="24sp"
+                android:fontFamily="@font/pretendard_extrabold"
                 android:textStyle="bold" />
         </LinearLayout>
 
