--- a/app/src/main/res/layout/learning_item_button.xml
+++ b/app/src/main/res/layout/learning_item_button.xml
@@ -9,23 +9,42 @@
 
     <LinearLayout
         android:id="@+id/learning_layout"
-        android:layout_width="0dp"
-        android:layout_height="160dp"
-        android:layout_margin="10dp"
+        android:layout_width="148dp"
+        android:layout_height="169dp"
+        android:layout_margin="16dp"
         android:layout_weight="1"
-        android:background="@color/iconLearning"
-        android:orientation="vertical">
+        android:background="@drawable/round_corner_white"
+        android:orientation="vertical"
+        android:elevation="6dp"
+        >
 
         <TextView
             android:id="@+id/learning_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:text="아이콘 교육"
+            android:layout_marginTop="14dp"
+            android:layout_marginLeft="12dp"
+            app:layout_constraintStart_toStartOf="@id/learning_layout"
+            app:layout_constraintTop_toTopOf="@id/learning_layout"
+            android:text="아이콘"
+            android:letterSpacing="-0.08"
+            android:fontFamily="@font/pretendard_semibold"
             android:textColor="@color/black"
-            android:textSize="24dp"
+            android:textSize="34dp"
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/learning_tv2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="-13dp"
+            android:layout_marginLeft="12dp"
+            app:layout_constraintStart_toStartOf="@id/learning_layout"
+            app:layout_constraintTop_toTopOf="@id/learning_layout"
+            android:text="교육"
+            android:letterSpacing="-0.08"
+            android:fontFamily="@font/pretendard_semibold"
+            android:textColor="#919191"
+            android:textSize="30dp"
             android:textStyle="bold" />
 
         <com.github.mikephil.charting.charts.HorizontalBarChart
