--- a/app/src/main/res/drawable/rounded_naver_search_bar.xml
+++ b/app/src/main/res/drawable/rounded_naver_search_bar.xml
@@ -2,6 +2,9 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
+    <corners android:radius="64dp"/>
     <solid android:color="@color/white"/>
-    <corners android:radius="200dp"/>
+    <stroke
+        android:width="2dp"
+        android:color="@color/naver"/>
 </shape>
