--- a/app/src/main/res/layout/fragment_edu_screen.xml
+++ b/app/src/main/res/layout/fragment_edu_screen.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    android:id="@+id/root"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,18 +9,98 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <View
+            android:id="@+id/edu_cover_start"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/edu_cover_bg"
+            android:layout_alignParentStart="true"/>
+
+        <View
+            android:id="@+id/edu_cover_end"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/edu_cover_bg"
+            android:layout_alignParentEnd="true"/>
+
+        <View
+            android:id="@+id/edu_cover_top"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="@drawable/edu_cover_bg"
+            android:layout_alignParentTop="true"/>
+
+        <View
+            android:id="@+id/edu_cover_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:background="@drawable/edu_cover_bg"
+            android:layout_alignParentBottom="true"/>
+
+        <ImageView
+            android:id="@+id/focus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/rounded_naver_search_bar"/>
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/edu_dialog"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:background="@color/black"
-        android:alpha="0.5">
+        android:layout_margin="150dp"
+        android:background="@drawable/edu_dialog_bg"
+        android:gravity="center">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="교육을 들어라!!"
-            android:textSize="24dp"
-            android:textColor="@color/white"/>
+            android:layout_marginBottom="12dp"
+            android:text="홈 화면"
+            android:textSize="24sp"/>
 
-    </RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="주로 배경화면이라고 불립니다."
+            android:textSize="20sp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/prev_button"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginEnd="12dp"
+                android:text="이전"
+                android:visibility="gone"
+                android:background="@drawable/white_rounded_rect"/>
+
+            <Button
+                android:id="@+id/next_button"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:text="다음"
+                android:background="@drawable/white_rounded_rect"/>
+
+            <Button
+                android:id="@+id/fin_button"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:text="완료"
+                android:visibility="gone"
+                android:background="@drawable/white_rounded_rect"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </FrameLayout>
