[fix] 액티비티와 레이아웃이 서로 매칭되지 않는 문제 해결

--- a/app/src/main/res/layout/activity_default_camera_gallery_view.xml
+++ b/app/src/main/res/layout/activity_default_camera_gallery_view.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".edu_space.default_app.GalleryViewActivity"
+    tools:context=".edu_space.default_app.activity.DefaultCameraGalleryViewActivity"
     android:background="@color/black">
 
     <LinearLayout
