--- a/app/src/main/res/layout/fragment_default_phone_recent_history.xml
+++ b/app/src/main/res/layout/fragment_default_phone_recent_history.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".edu_space.default_app.ContactFragment">
+    tools:context=".edu_space.default_app.fragment.DefaultPhoneRecentHistoryFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/contact_list"
+        android:id="@+id/recent_history_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
