--- a/app/src/main/res/layout/activity_default_camera.xml
+++ b/app/src/main/res/layout/activity_default_camera.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".edu_space.default_app.CameraActivity"
+    tools:context=".edu_space.default_app.activity.DefaultCameraActivity"
     android:background="@color/black">
 
     <LinearLayout
