--- a/app/src/main/res/layout/fragment_default_phone_keypad.xml
+++ b/app/src/main/res/layout/fragment_default_phone_keypad.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/phoneBgColor"
-    tools:context=".edu_space.default_app.KeypadFragment">
+    tools:context=".edu_space.default_app.fragment.DefaultPhoneKeypadFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
