[feat] 기본 앱 교육 프로세스 추가

--- a/app/src/main/res/layout/fragment_default_phone_keypad.xml
+++ b/app/src/main/res/layout/fragment_default_phone_keypad.xml
@@ -39,7 +39,8 @@
             android:layout_above="@id/key_layout1"
             android:gravity="center|bottom"
             android:inputType="phone"
-            android:textSize="24sp"/>
+            android:textSize="24sp"
+            android:textColor="@color/black"/>
 
         <!-- 1, 2, 3 -->
         <LinearLayout
