--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="light_grey">#C0C0C0</color>
     <color name="transparency">#00000000</color>
     <color name="semi_transparent_black">#80000000</color>
     <color name="todo">#0096FF</color>
