--- a/app/src/main/res/layout/learning_item_button.xml
+++ b/app/src/main/res/layout/learning_item_button.xml
@@ -53,12 +53,13 @@
             android:layout_height="50dp" />
 
         <ImageView
-            android:layout_width="42dp"
-            android:layout_height="43dp"
+            android:id="@+id/edu_icon"
+            android:layout_width="58dp"
+            android:layout_height="58dp"
             android:layout_gravity="end"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/baseline_play_circle_filled_24" />
+            android:layout_marginRight="16dp"
+            android:src="@drawable/ic_edubotton_icon" />
     </LinearLayout>
 </LinearLayout>
 
