--- a/app/src/main/res/layout/activity_taxi_main.xml
+++ b/app/src/main/res/layout/activity_taxi_main.xml
@@ -22,16 +22,23 @@
 
     <Button
         android:id="@+id/button18"
-        android:layout_width="85dp"
-        android:layout_height="75dp"
-        android:layout_marginEnd="140dp"
+        android:layout_width="50dp"
+        android:layout_height="53dp"
         android:background="@drawable/taxi"
-        android:gravity="bottom|center"
+        app:layout_constraintTop_toBottomOf="@id/adverise"
+        app:layout_constraintStart_toStartOf="@id/adverise"
+        android:layout_marginTop="13dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/button18"
+        app:layout_constraintStart_toStartOf="@id/button18"
         android:text="택시"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button8"
-        app:layout_constraintEnd_toStartOf="@+id/button10"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginTop="-10dp"
+        android:layout_marginLeft="12dp"
+        android:textSize="12dp"/>
+
 
     <Button
         android:id="@+id/button1"
@@ -117,7 +124,8 @@
         android:text="택시예약"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button7"
-        app:layout_constraintEnd_toStartOf="@+id/button5" />
+        app:layout_constraintEnd_toStartOf="@+id/button5"
+        android:layout_marginTop="11dp"/>
 
     <Button
         android:id="@+id/button5"
@@ -293,6 +301,15 @@
         android:text="회사"
         app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintStart_toEndOf="@+id/homeb" />
+
+    <ImageView
+        android:id="@+id/adverise"
+        android:layout_width="383dp"
+        android:layout_height="74dp"
+        android:src="@drawable/screenedu_blackground"
+        app:layout_constraintBottom_toTopOf="@+id/button4"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
 
     <ImageView
         android:id="@+id/imageView2"
