taxi_main modified

--- a/app/src/main/res/menu/taxi_menu.xml
+++ b/app/src/main/res/menu/taxi_menu.xml
@@ -9,21 +9,21 @@
         android:icon="@drawable/home__1_"
         />
     <item
-        android:id="@+id/buiness"
+        android:id="@+id/business"
         android:title="비즈니스"
         app:showAsAction="always"
-        android:icon="@drawable/home__1_"
+        android:icon="@drawable/business"
         />
     <item
         android:id="@+id/alarm"
         android:title="이용/알림"
         app:showAsAction="always"
-        android:icon="@drawable/home__1_"
+        android:icon="@drawable/alarm"
         />
     <item
         android:id="@+id/my"
         android:title="내 정보"
         app:showAsAction="always"
-        android:icon="@drawable/home__1_"
+        android:icon="@drawable/myinfo"
         />
 </menu>
