--- a/app/src/main/res/drawable/message_my_message_bg.xml
+++ b/app/src/main/res/drawable/message_my_message_bg.xml
@@ -2,6 +2,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/white"/>
-    <corners android:radius="32dp"/>
+
+    <solid android:color="@color/message_my_message_bg"/>
+    <corners android:radius="200dp"/>
 </shape>
