--- a/app/src/main/res/layout/fragment_edu_screen.xml
+++ b/app/src/main/res/layout/fragment_edu_screen.xml
@@ -47,6 +47,13 @@
 
     </RelativeLayout>
 
+    <View
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="250dp"
+        android:layout_marginLeft="75dp"
+        android:background="@color/naver"/>
+
     <LinearLayout
         android:id="@+id/edu_dialog"
         android:orientation="vertical"
